Fixed bug where extension window is wrong height when opened when a sync is in progress.

--- a/platform/firefox/css/platform.scss
+++ b/platform/firefox/css/platform.scss
@@ -44,3 +44,11 @@ body {
     bottom: -0.75rem;
   }
 }
+
+#working-panel {
+  &.fullsize {
+    height: 37rem;
+    width: 23rem;
+    position: unset;
+  }
+}
